<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/init_back">

    <ImageView
        android:layout_width="139sp"
        android:layout_height="139sp"
        android:src="@drawable/main_logo"
        android:layout_gravity="center"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp"
            android:background="@drawable/green_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:textColorHint="#979797"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/orange1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:id="@+id/login_username"
                android:fontFamily="@font/lexend"
                android:textColorHint="#979797"
                android:background="@drawable/green_border"
                android:padding="8dp"
                android:hint="@string/user_name"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="11dp"
                android:id="@+id/login_password"
                android:fontFamily="@font/lexend"
                android:textColorHint="#979797"
                android:background="@drawable/green_border"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="180dp"
                android:layout_height="66dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:id="@+id/login_button"
                android:text="@string/login1"
                android:fontFamily="@font/lexend"
                android:textSize="29sp"
                app:cornerRadius="18dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirect"
                android:text="@string/haven_t_registered_yet_register"
                android:fontFamily="@font/lexend"
                android:textSize="18sp"
                android:padding="9dp"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:textColor="@color/orange2"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>